--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon World</title>
+    <title>Pokémon World - Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/logo.png">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="images/logo.png" alt="Pokémon World Logo">
+                <a href="index.html"><img src="images/logo.png" alt="Pokémon World Logo"></a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -22,12 +22,23 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <button id="toggleTheme">Light/Dark Mode</button>
+            <!-- Dark mode toggle switch -->
+            <button class="theme-toggle" type="button" title="Toggle theme" aria-label="Toggle theme">
+                <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="1em" height="1em" fill="currentColor" class="theme-toggle__expand" viewBox="0 0 32 32">
+                    <clipPath id="theme-toggle__expand__cutout">
+                        <path d="M0-11h25a1 1 0 0017 13v30H0Z" />
+                    </clipPath>
+                    <g clip-path="url(#theme-toggle__expand__cutout)">
+                        <circle cx="16" cy="16" r="8.4" />
+                        <path d="M18.3 3.2c0 1.3-1 2.3-2.3 2.3s-2.3-1-2.3-2.3S14.7.9 16 .9s2.3 1 2.3 2.3zm-4.6 25.6c0-1.3 1-2.3 2.3-2.3s2.3 1 2.3 2.3-1 2.3-2.3 2.3-2.3-1-2.3-2.3zm15.1-10.5c-1.3 0-2.3-1-2.3-2.3s1-2.3 2.3-2.3 2.3 1 2.3 2.3-1 2.3-2.3 2.3zM3.2 13.7c1.3 0 2.3 1 2.3 2.3s-1 2.3-2.3 2.3S.9 17.3.9 16s1-2.3 2.3-2.3zm5.8-7C9 7.9 7.9 9 6.7 9S4.4 8 4.4 6.7s1-2.3 2.3-2.3S9 5.4 9 6.7zm16.3 21c-1.3 0-2.3-1-2.3-2.3s1-2.3 2.3-2.3 2.3 1 2.3 2.3-1 2.3-2.3 2.3zm2.4-21c0 1.3-1 2.3-2.3 2.3S23 7.9 23 6.7s1-2.3 2.3-2.3 2.4 1 2.4 2.3zM6.7 23C8 23 9 24 9 25.3s-1 2.3-2.3 2.3-2.3-1-2.3-2.3 1-2.3 2.3-2.3z" />
+                    </g>
+                </svg>
+            </button>
         </nav>
     </header>
     <main>
         <section class="hero">
-            <img src="images/banner.jpg" alt="Pokémon World Banner" class="hero-image">
+            <div class="hero-image"></div>
             <div class="hero-text">
                 <h1>Discover the World of Pokémon</h1>
                 <p>Explore your favorite Pokémon like never before. Click below to start your journey.</p>
@@ -36,19 +47,19 @@
         </section>
         <section class="features">
             <article>
-                <img src="images/pikachu.jpg" alt="Pikachu">
+                <img src="images/pikachu.jpg" alt="Pikachu ready for battle" loading="lazy">
                 <h2>Experience Pokémon Battles</h2>
                 <p>Engage in dynamic Pokémon battles and see who emerges victorious.</p>
                 <a href="battle.html" class="cta-link">Start a Battle</a>
             </article>
             <article>
-                <img src="images/charizard.jpg" alt="Charizard">
+                <img src="images/charizard.jpg" alt="Charizard displaying its power" loading="lazy">
                 <h2>Pokédex Information</h2>
                 <p>Access detailed stats and information about your favorite Pokémon.</p>
                 <a href="pokedex.html" class="cta-link">Explore the Pokédex</a>
             </article>
             <article>
-                <img src="images/bulbasaur.jpg" alt="Bulbasaur">
+                <img src="images/bulbasaur.jpg" alt="Bulbasaur evolving" loading="lazy">
                 <h2>Pokémon Evolution</h2>
                 <p>See how your Pokémon evolve and their different forms.</p>
                 <a href="evolution.html" class="cta-link">View Evolutions</a>
